# VCPToolBox

./: .dockerignore  .gitignore  ChangeLog.md  Dockerfile  FileFetcherServer.js  LICENSE  ModelRedirect.json.example  Plugin.js  README.md  README_en.md  README_ja.md  README_ru.md  TextChunker.js  VCP.md  VCPWinNotify.Py  VectorDBManager.js  WebSocketServer.js  WinNotify.py  agent_map.json  config.env.example  docker-compose.yml  emergency_stop_frontend_guide.md  example.test.js  main.html  main.js  modelRedirectHandler.js  package-lock.json  package.json  preload.js  pyproject.toml  renderer.js  requirements.txt  server.js  start_server.bat  style.css  update.bat  update_with_no_dependency.bat  vcpInfoHandler.js  vectorSearchWorker.js  vectorizationWorker.js  (+2 more)
AdminPanel/: image_cache_editor.css  image_cache_editor.html  index.html  rag_tags_editor.css  rag_tags_editor.html  script.js  style.css  vcptavern_editor.html  vcptavern_editor.js  woff.css
Agent/: Nova.txt  ThemeMaidCoco.txt
GoogleSearch/: search.js
Groupmodules/: groupchat.js  grouprenderer.js
OpenWebUISub/: OpenWebUI Force HTML Image Renderer with Lightbox.user.js  OpenWebUI VCP Tool Call Display Enhancer.user.js
SillyTavernSub/: ST主题布局 Inspired Mix V1.17 By Lionsky.json  ST正则 vcp调用优化1.json  ST正则 vcp调用优化2.json  ST正则 优化日记显示1.json  ST正则 优化日记显示2.json  ST油猴插件-酒馆VCP-ST插件.js  ST油猴插件-酒馆VCP-VCP时钟.js  ST油猴插件-酒馆VCP-VCP渲染.js  ST油猴插件-酒馆VCP-通知栏.js
TVStxt/: filetool.txt  filetool.txt.example  supertool.txt  supertool.txt.example
VCPChrome/: background.js  content_script.js  manifest.json  popup.html  popup.js
(+339 files in other folders)
